<resources>
    <string name="app_name">My Application</string>
    <string name="search_here">Search Here</string>
    <string name="search_button">Search Button</string>
    <string name="nature">Nature</string>
    <string name="space">space</string>
    <string name="book">Book</string>
    <string name="Sports">Sports</string>
    <string name="abstractlayout">Abstract</string>
    <string name="photo_by_pixel">Photo by pexel.com</string>
    <string name="WallZen">Wall Zen</string>
</resources>